--- a/07-Rock-Paper-Scissors.html
+++ b/07-Rock-Paper-Scissors.html
@@ -2,6 +2,15 @@
 <html>
   <head>
     <title>Rock Paper Scissors.</title>
+    <!--
+    <style>
+      .rock-class {
+        background-color: brown;
+        color: white;
+        border: none;
+      }
+    </style>      -->
+  
   </head>
   <body>
     <p>
@@ -10,7 +19,7 @@
     
     <button onclick="
       playGame('rock');
-    ">Rock</button>
+    " class="rock-class">Rock</button>
 
     <button onclick="
       playGame('paper');
