improved version of rock paper scissors with a good logic.

--- a/06-Rock-Paper-Scissors.html
+++ b/06-Rock-Paper-Scissors.html
@@ -22,7 +22,7 @@
       }
       let result = '';
       if(computerMove === 'rock'){
-        result = `it's a Tie.`;
+        result = `it's a tie.`;
       }else if(computerMove === 'paper'){
         result = 'You loose.';
       }else if(computerMove==='Scissors'){
@@ -46,7 +46,7 @@
       if(comMove === 'rock'){
         result2 = `You Win.`;
       }else if(comMove === 'paper'){
-        result2 = `it's a Tie`;
+        result2 = `it's a tie`;
       }else if(comMove==='Scissors'){
         result2 = 'You loose.';
       }
@@ -71,7 +71,7 @@
       }else if(comMove2 === 'paper'){
         result3 = `You win`;
       }else if(comMove2==='Scissors'){
-        result3 = `It's a Tie`;
+        result3 = `It's a tie`;
       }
       alert(`You picked Scissors, System picked ${comMove2}. ${result3} `);
 ">Scissors</button>
